...
    _dateOfExpense = _expenseToShow.dateOfExpense;
    _iconName = _expenseToShow.category.iconName;

    _editBarButton = [[UIBarButtonItem alloc]initWithImage:[UIImage imageNamed:@"Edit"] style:UIBarButtonItemStylePlain target:self action:@selector(editButtonPressed:)];
    _doneBarButton = [[UIBarButtonItem alloc]initWithBarButtonSystemItem:UIBarButtonSystemItemDone target:self action:@selector(doneButtonPressed:)];
    _cancelBatButton = [[UIBarButtonItem alloc]initWithBarButtonSystemItem:UIBarButtonSystemItemCancel target:self action:@selector(cancelButtonPressed:)];
    _deleteBarButton = [[UIBarButtonItem alloc]initWithImage:[UIImage imageNamed:@"Trash"] style:UIBarButtonItemStylePlain target:self action:@selector(deleteButtonPressed:)];

    self.navigationItem.rightBarButtonItems = @[_deleteBarButton, _editBarButton];

    _isEditMode = NO;

    _originalTrailingSpace = self.descriptionLabelTrailingSpace.constant;
...

    [self updateText];
    [self setDetailMode];
}

- (void)deleteButtonPressed:(UIBarButtonItem *)sender {
    UIAlertView *alertView = [[UIAlertView alloc]initWithTitle:NSLocalizedString(@"Delete transaction?", @"Delete transaction alert view title in DetailExpenseVC") message:nil delegate:self cancelButtonTitle:NSLocalizedString(@"No", @"Cancel button title in DetailExpenseVC") otherButtonTitles:NSLocalizedString(@"Delete", @"Delete transaction alert view other button title in DetailExpenseVC"), nil]
    [alertView show];
}

- (void)deleteTransaction {
    [self.managedObjectContext deleteObject:_expenseToShow];
    
...
