...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="G42-sP-2k6" id="8nU-Ek-tfV"/>
                            <outlet property="delegate" destination="G42-sP-2k6" id="hpA-7L-7mS"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Add Expense" id="4gu-5P-d8u">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="q5Y-Wk-Tf6">
                            <connections>
                                <action selector="cancelButtonPressed:" destination="G42-sP-2k6" id="ZCJ-Qj-DA5"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="4eo-eH-MDa" id="gn2-K3-a0p"/>
                            <outlet property="delegate" destination="4eo-eH-MDa" id="S6f-Ff-QdV"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Expense" id="Qur-wg-iYa"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                    <connections>
                        <outlet property="amountTextField" destination="evm-gb-Pzi" id="67y-ba-DrQ"/>
                        <outlet property="amountTextFieldTrailingSpace" destination="El2-xM-mh0" id="h0G-h0-arI"/>
                        <outlet property="categoryLabelTrailingSpace" destination="S3e-lV-bmg" id="Cgy-VS-eVV"/>
                        <outlet property="categoryNameLabel" destination="uxS-mc-hf3" id="dS6-Vr-bYD"/>
...
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" text="Amount" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfA-1R-jSe">
                                                    <rect key="frame" x="0.0" y="42" width="64" height="22"/>
                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Clothes" translatesAutoresizingMaskIntoConstraints="NO" id="EcY-GA-UrI">
                                                    <rect key="frame" x="11" y="0.0" width="42" height="42"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="42" id="IIP-7e-K4T"/>
                                                        <constraint firstAttribute="height" constant="42" id="orZ-fT-L0s"/>
                                                    </constraints>
                                                </imageView>
...
