...
    
    [self createDoneBarButton];
    
    _delegateNotified = NO;
    _datePickerVisible = NO;
    _date = [NSDate date];
    self.expenseTextField.accessibilityIdentifier = @"enter_amount";
}

- (void)viewDidAppear:(BOOL)animated {
    [super viewDidAppear:animated];
    [_expenseTextField becomeFirstResponder];
    self.expenseTextField.accessibilityIdentifier = @"enter_amount";
...
        }
    } else if (indexPath.section == SectionTypeDescription) {
        UITableViewCell *descriptionCell = [tableView dequeueReusableCellWithIdentifier:kDescriptionTextFieldCellIdentifier];
        
        self.descriptionTextField = (UITextField *)[descriptionCell viewWithTag:kDescriptionTextFieldTag];
        
        self.descriptionTextField.accessibilityIdentifier = @"enter_description";
        [descriptionCell.contentView addSubview:separatorLineView];
        
        return descriptionCell;
    }
    return nil;
}
...
